@@ -876,8 +876,6 @@ name|String
 name|fieldName
 parameter_list|)
 block|{
-try|try
-block|{
 name|FieldInfo
 name|fi
 init|=
@@ -886,30 +884,17 @@ argument_list|(
 name|fieldName
 argument_list|)
 decl_stmt|;
-if|if
-condition|(
+return|return
+operator|(
 name|fi
 operator|!=
 literal|null
-condition|)
-return|return
+operator|)
+condition|?
 name|fi
 operator|.
 name|number
-return|;
-block|}
-catch|catch
-parameter_list|(
-name|IndexOutOfBoundsException
-name|ioobe
-parameter_list|)
-block|{
-return|return
-operator|-
-literal|1
-return|;
-block|}
-return|return
+else|:
 operator|-
 literal|1
 return|;
@@ -945,27 +930,27 @@ name|int
 name|fieldNumber
 parameter_list|)
 block|{
-try|try
-block|{
-return|return
+name|FieldInfo
+name|fi
+init|=
 name|fieldInfo
 argument_list|(
 name|fieldNumber
 argument_list|)
+decl_stmt|;
+return|return
+operator|(
+name|fi
+operator|!=
+literal|null
+operator|)
+condition|?
+name|fi
 operator|.
 name|name
-return|;
-block|}
-catch|catch
-parameter_list|(
-name|NullPointerException
-name|npe
-parameter_list|)
-block|{
-return|return
+else|:
 literal|""
 return|;
-block|}
 block|}
 comment|/**    * Return the fieldinfo object referenced by the fieldNumber.    * @param fieldNumber    * @return the FieldInfo object or null when the given fieldNumber    * doesn't exist.    */
 DECL|method|fieldInfo
@@ -977,9 +962,13 @@ name|int
 name|fieldNumber
 parameter_list|)
 block|{
-try|try
-block|{
 return|return
+operator|(
+name|fieldNumber
+operator|>=
+literal|0
+operator|)
+condition|?
 operator|(
 name|FieldInfo
 operator|)
@@ -989,18 +978,9 @@ name|get
 argument_list|(
 name|fieldNumber
 argument_list|)
-return|;
-block|}
-catch|catch
-parameter_list|(
-name|IndexOutOfBoundsException
-name|ioobe
-parameter_list|)
-block|{
-return|return
+else|:
 literal|null
 return|;
-block|}
 block|}
 DECL|method|size
 specifier|public
